--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,170 +1,433 @@
+* {
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+}
+
 body {
   display: flex;
   font-family: sans-serif;
-  justify-content: center; }
-  body .pokedex {
-    align-items: flex-end;
-    display: flex;
-    height: 500px;
-    margin: 50px;
-    width: 800px; }
+  justify-content: center;
+}
+body .pokedex {
+  align-items: flex-end;
+  display: flex;
+  height: 500px;
+  margin: 50px;
+  width: 800px;
+}
 
 .top-container {
   border: 3px solid black;
   width: 50%;
   background: aqua;
   height: 100%;
-  width: calc(50% + 50px); }
-  .top-container .top-container_top-section {
-    border-bottom: 3px solid black;
-    display: flex;
-    height: 50px;
-    padding: 8px; }
-    .top-container .top-container_top-section .top-large_button {
-      background: radial-gradient(farthest-corner at 10px 10px, white, #369cd4, #369cd4);
-      border-radius: 50%;
-      border: 2px solid white;
-      box-shadow: 0 0 2px 2px rgba(0, 0, 0, 0.5);
-      height: 30px;
-      width: 30px; }
-    .top-container .top-container_top-section .top-small_buttons {
-      display: flex;
-      margin: 0 25px; }
-      .top-container .top-container_top-section .top-small_buttons .top-button_red,
-      .top-container .top-container_top-section .top-small_buttons .top-button_yellow,
-      .top-container .top-container_top-section .top-small_buttons .top-button_green {
-        border-radius: 50%;
-        border: 1px solid black;
-        height: 10px;
-        margin-right: 5px;
-        width: 10px; }
-  .top-container .top-container_main-section-container {
-    display: flex;
-    height: calc(100% - 50px); }
-    .top-container .top-container_main-section-container .top-container_main-section {
-      height: 100%;
-      padding: 25px;
-      width: 500px; }
-      .top-container .top-container_main-section-container .top-container_main-section .mainsection_white {
-        background: #dedede;
-        border: 3px solid black;
-        box-shadow: inset 0 0 3px 3px rgba(0, 0, 0, 0.3);
-        height: 325px; }
-        .top-container .top-container_main-section-container .top-container_main-section .mainsection_white .main-section_black {
-          background: black;
-          height: calc(100% - 50px);
-          margin: 25px;
-          padding: 10px;
-          width: calc(100% - 50px); }
-          .top-container .top-container_main-section-container .top-container_main-section .mainsection_white .main-section_black .main-screen {
-            border-radius: 15px;
-            height: 100%;
-            padding: 15px; }
-            .top-container .top-container_main-section-container .top-container_main-section .mainsection_white .main-section_black .main-screen .screen-header {
-              align-items: center;
-              display: flex;
-              justify-content: space-between; }
-              .top-container .top-container_main-section-container .top-container_main-section .mainsection_white .main-section_black .main-screen .screen-header .poke-name {
-                color: white;
-                font-size: 25px;
-                font-weight: bold; }
-              .top-container .top-container_main-section-container .top-container_main-section .mainsection_white .main-section_black .main-screen .screen-header .poke-id {
-                color: rgba(0, 0, 0, 0.5);
-                font-size: 20px; }
-            .top-container .top-container_main-section-container .top-container_main-section .mainsection_white .main-section_black .main-screen .screen_image {
-              display: flex;
-              justify-content: space-around; }
-              .top-container .top-container_main-section-container .top-container_main-section .mainsection_white .main-section_black .main-screen .screen_image .poke-front-image,
-              .top-container .top-container_main-section-container .top-container_main-section .mainsection_white .main-section_black .main-screen .screen_image .poke-back-image {
-                height: 96px;
-                width: 96px; }
-            .top-container .top-container_main-section-container .top-container_main-section .mainsection_white .main-section_black .main-screen .screen_description {
-              display: flex;
-              height: 100px;
-              justify-content: space-around; }
-              .top-container .top-container_main-section-container .top-container_main-section .mainsection_white .main-section_black .main-screen .screen_description .stats_types {
-                height: 100%;
-                padding: 5px; }
-                .top-container .top-container_main-section-container .top-container_main-section .mainsection_white .main-section_black .main-screen .screen_description .stats_types .poke-type-one,
-                .top-container .top-container_main-section-container .top-container_main-section .mainsection_white .main-section_black .main-screen .screen_description .stats_types .poke-type-two {
-                  background: rgba(255, 255, 255, 0.3);
-                  border-radius: 25px;
-                  display: block;
-                  margin-bottom: 10px;
-                  padding: 10px;
-                  text-align: center; }
-              .top-container .top-container_main-section-container .top-container_main-section .mainsection_white .main-section_black .main-screen .screen_description .screen_stats {
-                background: rgba(0, 0, 0, 0.3);
-                border-radius: 5px;
-                color: white;
-                display: flex;
-                flex-direction: column;
-                height: 100%;
-                justify-content: space-between;
-                padding: 20px 15px; }
-  .top-container .top-container_controller {
-    align-items: center;
-    display: flex;
-    justify-content: space-around;
-    margin: 10px 25px 0; }
-    .top-container .top-container_controller .controller_d-pad {
-      display: grid;
-      grid-template-columns: repeat(3, 1fr);
-      grid-template-rows: repeat(3, 1fr); }
-      .top-container .top-container_controller .controller_d-pad .d-pad_top {
-        border-left: 1px solid dimgrey;
-        border-radius: 5px 5px 0 0;
-        border-right: 1px solid dimgrey;
-        border-top: 1px solid dimgrey;
-        grid-column: 2 / span 1;
-        grid-row: 1 / span 1; }
-      .top-container .top-container_controller .controller_d-pad .d-pad_left {
-        border-bottom: 1px solid dimgrey;
-        border-left: 1px solid dimgrey;
-        border-radius: 5px 0 0 5px;
-        border-top: 1px solid dimgrey;
-        grid-column: 1 / span 1;
-        grid-row: 2 / span 1; }
-      .top-container .top-container_controller .controller_d-pad .d-pad_middle {
-        grid-column: 2 / span 1;
-        grid-row: 2 / span 1; }
-      .top-container .top-container_controller .controller_d-pad .d-pad_right {
-        border-bottom: 1px solid dimgrey;
-        border-radius: 0 5px 5px 0;
-        border-right: 1px solid dimgrey;
-        border-top: 1px solid dimgrey;
-        grid-column: 3 / span 1;
-        grid-row: 2 / span 1; }
-      .top-container .top-container_controller .controller_d-pad .d-pad_bottom {
-        border-bottom: 1px solid dimgrey;
-        border-left: 1px solid dimgrey;
-        border-radius: 0 0 5px 5px;
-        border-right: 1px solid dimgrey;
-        grid-column: 2 / span 1;
-        grid-row: 3 / span 1; }
-    .top-container .top-container_controller .controller_buttons {
-      display: flex;
-      justify-content: space-around;
-      width: 100px; }
-      .top-container .top-container_controller .controller_buttons .buttons_button {
-        align-items: center;
-        background: black;
-        border-radius: 50%;
-        border: 1px solid dimgrey;
-        box-shadow: 0 0 2px 2px rgba(0, 0, 0, 0.3);
-        color: rgba(255, 255, 255, 0.75);
-        display: flex;
-        height: 35px;
-        justify-content: center;
-        width: 35px; }
-    .top-container .top-container_controller .top-container_right {
-      border-left: 3px solid black;
-      display: flex;
-      flex-direction: column;
-      height: 100%;
-      justify-content: space-between;
-      width: 50px; }
-      .top-container .top-container_controller .top-container_right .left-container_hinge {
-        background: linear-gradient(to right, #7f100f, #e71d23, #e71d23, #7f100f);
-        height: 75px;
-        width: 100%; }
+  width: calc(50% + 50px);
+}
+.top-container .top-container_top-section {
+  border-bottom: 3px solid black;
+  display: flex;
+  height: 50px;
+  padding: 8px;
+}
+.top-container .top-container_top-section .top-large_button {
+  background: radial-gradient(
+    farthest-corner at 10px 10px,
+    white,
+    #369cd4,
+    #369cd4
+  );
+  border-radius: 50%;
+  border: 2px solid white;
+  box-shadow: 0 0 2px 2px rgba(0, 0, 0, 0.5);
+  height: 30px;
+  width: 30px;
+}
+.top-container .top-container_top-section .top-small_buttons {
+  display: flex;
+  margin: 0 25px;
+}
+.top-container .top-container_top-section .top-small_buttons .top-button_red,
+.top-container .top-container_top-section .top-small_buttons .top-button_yellow,
+.top-container .top-container_top-section .top-small_buttons .top-button_green {
+  border-radius: 50%;
+  border: 1px solid black;
+  height: 10px;
+  margin-right: 5px;
+  width: 10px;
+}
+.top-container .top-container_main-section-container {
+  display: flex;
+  height: calc(100% - 50px);
+}
+.top-container
+  .top-container_main-section-container
+  .top-container_main-section {
+  height: 100%;
+  padding: 25px;
+  width: 500px;
+}
+.top-container
+  .top-container_main-section-container
+  .top-container_main-section
+  .mainsection_white {
+  background: #dedede;
+  border: 3px solid black;
+  box-shadow: inset 0 0 3px 3px rgba(0, 0, 0, 0.3);
+  height: 325px;
+}
+.top-container
+  .top-container_main-section-container
+  .top-container_main-section
+  .mainsection_white
+  .main-section_black {
+  background: black;
+  height: calc(100% - 50px);
+  margin: 25px;
+  padding: 10px;
+  width: calc(100% - 50px);
+}
+.top-container
+  .top-container_main-section-container
+  .top-container_main-section
+  .mainsection_white
+  .main-section_black
+  .main-screen {
+  border-radius: 15px;
+  height: 100%;
+  padding: 15px;
+}
+.top-container
+  .top-container_main-section-container
+  .top-container_main-section
+  .mainsection_white
+  .main-section_black
+  .main-screen
+  .screen-header {
+  align-items: center;
+  display: flex;
+  justify-content: space-between;
+}
+.top-container
+  .top-container_main-section-container
+  .top-container_main-section
+  .mainsection_white
+  .main-section_black
+  .main-screen
+  .screen-header
+  .poke-name {
+  color: white;
+  font-size: 25px;
+  font-weight: bold;
+}
+.top-container
+  .top-container_main-section-container
+  .top-container_main-section
+  .mainsection_white
+  .main-section_black
+  .main-screen
+  .screen-header
+  .poke-id {
+  color: rgba(0, 0, 0, 0.5);
+  font-size: 20px;
+}
+.top-container
+  .top-container_main-section-container
+  .top-container_main-section
+  .mainsection_white
+  .main-section_black
+  .main-screen
+  .screen_image {
+  display: flex;
+  justify-content: space-around;
+}
+.top-container
+  .top-container_main-section-container
+  .top-container_main-section
+  .mainsection_white
+  .main-section_black
+  .main-screen
+  .screen_image
+  .poke-front-image,
+.top-container
+  .top-container_main-section-container
+  .top-container_main-section
+  .mainsection_white
+  .main-section_black
+  .main-screen
+  .screen_image
+  .poke-back-image {
+  height: 96px;
+  width: 96px;
+}
+.top-container
+  .top-container_main-section-container
+  .top-container_main-section
+  .mainsection_white
+  .main-section_black
+  .main-screen
+  .screen_description {
+  display: flex;
+  height: 100px;
+  justify-content: space-around;
+}
+.top-container
+  .top-container_main-section-container
+  .top-container_main-section
+  .mainsection_white
+  .main-section_black
+  .main-screen
+  .screen_description
+  .stats_types {
+  height: 100%;
+  padding: 5px;
+}
+.top-container
+  .top-container_main-section-container
+  .top-container_main-section
+  .mainsection_white
+  .main-section_black
+  .main-screen
+  .screen_description
+  .stats_types
+  .poke-type-one,
+.top-container
+  .top-container_main-section-container
+  .top-container_main-section
+  .mainsection_white
+  .main-section_black
+  .main-screen
+  .screen_description
+  .stats_types
+  .poke-type-two {
+  background: rgba(255, 255, 255, 0.3);
+  border-radius: 25px;
+  display: block;
+  margin-bottom: 10px;
+  padding: 10px;
+  text-align: center;
+}
+.top-container
+  .top-container_main-section-container
+  .top-container_main-section
+  .mainsection_white
+  .main-section_black
+  .main-screen
+  .screen_description
+  .screen_stats {
+  background: rgba(0, 0, 0, 0.3);
+  border-radius: 5px;
+  color: white;
+  display: flex;
+  flex-direction: column;
+  height: 100%;
+  justify-content: space-between;
+  padding: 20px 15px;
+}
+.top-container .top-container_controller {
+  align-items: center;
+  display: flex;
+  justify-content: space-around;
+  margin: 10px 25px 0;
+}
+.top-container .top-container_controller .controller_d-pad {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  grid-template-rows: repeat(3, 1fr);
+}
+.top-container .top-container_controller .controller_d-pad .d-pad_top {
+  border-left: 1px solid dimgrey;
+  border-radius: 5px 5px 0 0;
+  border-right: 1px solid dimgrey;
+  border-top: 1px solid dimgrey;
+  grid-column: 2 / span 1;
+  grid-row: 1 / span 1;
+}
+.top-container .top-container_controller .controller_d-pad .d-pad_left {
+  border-bottom: 1px solid dimgrey;
+  border-left: 1px solid dimgrey;
+  border-radius: 5px 0 0 5px;
+  border-top: 1px solid dimgrey;
+  grid-column: 1 / span 1;
+  grid-row: 2 / span 1;
+}
+.top-container .top-container_controller .controller_d-pad .d-pad_middle {
+  grid-column: 2 / span 1;
+  grid-row: 2 / span 1;
+}
+.top-container .top-container_controller .controller_d-pad .d-pad_right {
+  border-bottom: 1px solid dimgrey;
+  border-radius: 0 5px 5px 0;
+  border-right: 1px solid dimgrey;
+  border-top: 1px solid dimgrey;
+  grid-column: 3 / span 1;
+  grid-row: 2 / span 1;
+}
+.top-container .top-container_controller .controller_d-pad .d-pad_bottom {
+  border-bottom: 1px solid dimgrey;
+  border-left: 1px solid dimgrey;
+  border-radius: 0 0 5px 5px;
+  border-right: 1px solid dimgrey;
+  grid-column: 2 / span 1;
+  grid-row: 3 / span 1;
+}
+.top-container .top-container_controller .controller_buttons {
+  display: flex;
+  justify-content: space-around;
+  width: 100px;
+}
+.top-container .top-container_controller .controller_buttons .buttons_button {
+  align-items: center;
+  background: black;
+  border-radius: 50%;
+  border: 1px solid dimgrey;
+  box-shadow: 0 0 2px 2px rgba(0, 0, 0, 0.3);
+  color: rgba(255, 255, 255, 0.75);
+  display: flex;
+  height: 35px;
+  justify-content: center;
+  width: 35px;
+}
+.top-container .top-container_controller .top-container_right {
+  border-left: 3px solid black;
+  display: flex;
+  flex-direction: column;
+  height: 100%;
+  justify-content: space-between;
+  width: 50px;
+}
+.top-container
+  .top-container_controller
+  .top-container_right
+  .left-container_hinge {
+  background: linear-gradient(to right, #7f100f, #e71d23, #e71d23, #7f100f);
+  height: 75px;
+  width: 100%;
+}
+
+.bottom-container {
+  background: #e71d23;
+  height: calc(100% - 50px);
+  padding: 25px;
+  width: calc(50% - 50px);
+}
+.bottom-container .bottom-container_black {
+  background: black;
+  box-shadow: 0 0 2px 2px rgba(0, 0, 0, 0.3);
+  height: 300px;
+  padding: 10px;
+}
+.bottom-container .bottom-container_black .bottom-container_screen {
+  background: #43b0f2;
+  border-radius: 15px;
+  display: flex;
+  flex-direction: column;
+  flex-wrap: wrap;
+  height: 100%;
+  padding: 15px 15px 0;
+}
+.bottom-container .bottom-container_black .bottom-container_screen .list-item {
+  align-items: center;
+  color: white;
+  cursor: pointer;
+  display: flex;
+  font-size: 12px;
+  height: 25px;
+  overflow-x: hidden;
+  padding-left: 5px;
+  width: 50%;
+}
+.list-item:hover {
+  background: #85cbf2;
+  color: black;
+}
+.list-item:active {
+  background: #1280f2;
+  color: white;
+}
+.left-button:hover,
+.right-button:hover {
+  background: white;
+}
+
+.left-button:active,
+.right-button:active {
+  box-shadow: inset 0 0 2px 2px rgba(0, 0, 0, 0.3);
+}
+
+.hide {
+  display: none;
+}
+/* pokemon types */
+
+.normal {
+  background: #babaae;
+}
+
+.fighting {
+  background: #a75543;
+}
+
+.flying {
+  background: #78a2ff;
+}
+
+.poison {
+  background: #a95ca0;
+}
+
+.ground {
+  background: #eecc55;
+}
+
+.rock {
+  background: #ccbd72;
+}
+
+.bug {
+  background: #c2d21e;
+}
+
+.ghost {
+  background: #7975d7;
+}
+
+.steel {
+  background: #c4c2db;
+}
+
+.fire {
+  background: #fa5643;
+}
+
+.water {
+  background: #56adff;
+}
+
+.grass {
+  background: #8cd750;
+}
+
+.electric {
+  background: #fde139;
+}
+
+.psychic {
+  background: #fa65b4;
+}
+
+.ice {
+  background: #96f1ff;
+}
+
+.dragon {
+  background: #8673ff;
+}
+
+.dark {
+  background: #8d6855;
+}
+
+.fairy {
+  background: #f9aeff;
+}
